# obsidian-edge-finder

./: .gitignore  README.md  pyproject.toml
docs/: triage-spec.md
edge_finder/: _art.py  apply.py  cache.py  cli.py  fingerprint.py  index.py  interview.py  ontology.py  propose.py  propose_clusters.py  propose_holistic.py  propose_topology.py  report.py  shapes.py  stubs.py  surprises.py  topology.py  triage.py  typed_edges.py  verify.py  walker.py
edge_finder/extract/: age.py  dates.py  granola.py  money.py  stack.py  status.py
ontology/: INTERVIEW.md  README.md  core.yaml
ontology/profiles/: bookmark-import.yaml  granola-meetings.yaml
tests/: test_apply.py  test_propose_topology.py  test_triage.py  test_typed_edges.py  test_walker.py
