[project]
name = "obsidian-edge-finder"
version = "0.1.0"
description = "Lightweight tool to find missing connections in an Obsidian vault."
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
edge-finder = "edge_finder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["edge_finder*"]

[tool.mypy]
ignore_missing_imports = true
